client/components/CardsTable/style.css
@import '../../constants/styles.css';

.container{
  margin: 0 auto;
  color: white;
  display: flex;
  flex-direction: column;
  font-size: 1.5em;
  height: 100%;
  user-select: none;
  align-items: center;
  line-height: normal;
  width: 90vmin;
  max-width: 60em;
}
.inFeed.container{
  max-width: 18em;
}

.inFeed.container:not(.mobile){
  width: 70vmin;
}

.inFeed.container.mobile{
  width: 92vmin;
}


.title{
  font-weight: bold;
  text-align: center;
  margin-bottom: 10px;
}
.maintitle{
  font-size: 2em;
}
.inFeed.maintitle{
  font-size: 1.5em;
}

.handchartContainer{
  border-collapse: collapse;
  font-weight: bold;
  color: subtitleColor;
  width: 100%;
}
.inFeed.handchartContainer{
}
.hand{
  border:1px solid #d0d0da;
  text-align: center;
  cursor: pointer;
  background-color: #f2f2f2;
}
.hand:hover{
  font-weight: bold;
  background-color: #f2f2f2;
  transform: scale(2.5);
}

.legend{
  font-size: 2.2vmin;
  width: 100%;
  display: flex;
  justify-content: space-around;
  padding:2em 0;
}
.label{
  display: flex;
  align-items: center;
  cursor: pointer;
}
.label.disabled{
  color: subtitleColor;
}
.labelColor{
  height: 100%;
  width: 15px;
  margin-right: 5px;
}
.labelColor:after{
  content: '🗸';
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.disabled>.labelColor:after{
  content: '';
}

